Sun Jul 25 05:37:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_cmp): honor the result of infinite? method of the
	  other.  [ruby-core:31470]

Wed Jul 21 15:22:17 2010  Evan Phoenix <evan@fallingsnow.net>

	* lib/rubygems/custom_require.rb, gem_prelude.rb: Load code from
	  from gems properly.

Tue Jul 20 11:35:11 2010  Evan Phoenix  <evan@ruby-lang.org>

	* lib/rubygems.rb: Load the custom require if --disable-rubygems
	  was used.

Tue Jul 20 11:27:18 2010  Evan Phoenix  <evan@ruby-lang.org>

	* gem_prelude.rb: Pull in rubygem's custom require
	  [ruby-core:30846]

	* lib/rubygems.rb: Handle always having custom require available

Tue Jul 13 20:58:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_DEFAULT_ARCH): adjust for target
	  cpu. [ruby-core:31243]

Fri Jul 23 15:09:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_MINGW32): ignore msvc suffix.

Fri Jul 23 09:02:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_expr_str): fixed out-of-boundary access at invalid
	  multibyte characters.

Thu Jul 22 16:27:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_expr_str): fix broken Regexp#inspect when it
	  is ASCII-8BIT and non-ASCII character.
	  The length of character should be from original byte string.
	  [ruby-core:31431]

Thu Jul 22 03:02:55 2010  Eric Hodel  <drbrain@segment7.net>

	* README.EXT: fix signature of rb_ensure and rb_rescue to match
	  implementation.

Tue Jul 20 12:42:06 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/raddrinfo.c (rb_getaddrinfo): according to my
	  valgrind output this variable should be initialized beforehand.

Tue Jul 20 12:50:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_flush_buffer): write and buffer operations should be
	  monolithic.  [ruby-core:31348]

Tue Jul 20 12:27:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy): check file name